<resources>
    <string name="app_name">Knit and Count!</string>
    <string name="project">Project</string>
    <string name="create_counter">Create Counter</string>
    <string name="start_value">Start value</string>
    <string name="name">Name</string>
    <string name="optional_reset_value">Optional: Reset value</string>
    <string name="add_counter">Save counter</string>
    <string name="loading">loading</string>
    <string name="decrement">-</string>
    <string name="counter_value_placeholder">---</string>
    <string name="add_change_pdf">Add/Change PDF</string>
    <string name="delete_counter">Delete Counter</string>
    <string name="increment">+</string>
    <string name="save_project">Save Project</string>
    <string name="delete_project">Delete Project</string>
    <string name="meterage_m_100g">Meterage (m/100g)</string>
    <string name="size">Size</string>
    <string name="needlesize">Needlesize</string>
    <string name="wet_gauge_10cm_x_10cm">Washed gauge (10cm x 10cm)</string>
    <string name="dry_gauge_10cm_x_10cm">Unwashed gauge (10cm x 10cm)</string>
    <string name="notes">Notes</string>
    <string name="projects_name">Projects name</string>
    <string name="remove_current_pdf">Remove current PDF</string>
</resources>
