<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/counter_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_weight="2"
            android:text="@string/loading"
            />
        <ImageButton
            android:id="@+id/counter_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_settings"
            android:layout_gravity="center"
            android:contentDescription="@string/setup_counter" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">
            <Button
                android:id="@+id/counter_decrement"
                android:text="@string/decrement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/counter_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/counter_value_placeholder"
                android:layout_weight="2"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/counter_increment"
                android:text="@string/increment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="24sp"/>
    </LinearLayout>
</LinearLayout>